examples/todo-app/mix_after_import_fix.out
Compiling 118 files (.ex)
     warning: variable "this1" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 163 │ this1 = nil
     │ ~
     │
     └─ lib/todo_app_web/todo_live.ex:163:1: TodoAppWeb.TodoLive.load_todos/1

     warning: variable "this1" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 158 │ this1 = nil
     │ ~
     │
     └─ lib/todo_app_web/todo_live.ex:158:1: TodoAppWeb.TodoLive.load_todos/1

     warning: code block contains unused literal 1 (remove the literal or assign it to _ to avoid warnings)
     │
 206 │   defp complete_all_todos(socket) do
     │   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     │
     └─ lib/todo_app_web/todo_live.ex:206: TodoAppWeb.TodoLive.complete_all_todos/1

     warning: variable "elem" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 208 │     Enum.each(pending, fn elem ->
     │                           ~
     │
     └─ lib/todo_app_web/todo_live.ex:208:27: TodoAppWeb.TodoLive.complete_all_todos/1

     warning: code block contains unused literal 1 (remove the literal or assign it to _ to avoid warnings)
     │
 230 │   defp delete_completed_todos(socket) do
     │   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     │
     └─ lib/todo_app_web/todo_live.ex:230: TodoAppWeb.TodoLive.delete_completed_todos/1

     warning: variable "elem" is unused (if the variable is not meant to be used, prefix it with an underscore)
     │
 232 │     Enum.each(completed, fn elem ->
     │                             ~
     │
     └─ lib/todo_app_web/todo_live.ex:232:29: TodoAppWeb.TodoLive.delete_completed_todos/1

     error: undefined variable "query"
     │
 613 │       _ = Enum.filter(todos, fn t -> not Kernel.is_nil(:binary.match(String.downcase(t.title), query)) or not Kernel.is_nil(t.description) and not Kernel.is_nil(:binary.match(String.downcase(t.description), query)) end)
     │                                                                                                                                                                                                                ^^^^^
     │
     └─ lib/todo_app_web/todo_live.ex:613:208: TodoAppWeb.TodoLive.filter_todos/3

     error: undefined variable "query"
     │
 613 │       _ = Enum.filter(todos, fn t -> not Kernel.is_nil(:binary.match(String.downcase(t.title), query)) or not Kernel.is_nil(t.description) and not Kernel.is_nil(:binary.match(String.downcase(t.description), query)) end)
     │                                                                                                ^^^^^
     │
     └─ lib/todo_app_web/todo_live.ex:613:96: TodoAppWeb.TodoLive.filter_todos/3

     error: undefined variable "todo"
     │
 234 │   TodoApp.Repo.delete(todo)
     │                       ^^^^
     │
     └─ lib/todo_app_web/todo_live.ex:234:23: TodoAppWeb.TodoLive.delete_completed_todos/1

     error: undefined variable "todo"
     │
 215 │       Log.trace("Failed to complete todo " <> todo.id.to_string() <> ": " <> reason.to_string(), %{:file_name => "src_haxe/server/live/TodoLive.hx", :line_number => 517, :class_name => "server.live.TodoLive", :method_name => "completeAllTodos"})
     │                                               ^^^^
     │
     └─ lib/todo_app_web/todo_live.ex:215:47: TodoAppWeb.TodoLive.complete_all_todos/1

     error: undefined variable "todo"
     │
 210 │   updated_changeset = TodoApp.Todo.toggle_completed(todo)
     │                                                     ^^^^
     │
     └─ lib/todo_app_web/todo_live.ex:210:53: TodoAppWeb.TodoLive.complete_all_todos/1


== Compilation error in file lib/todo_app_web/todo_live.ex ==
** (CompileError) lib/todo_app_web/todo_live.ex: cannot compile module TodoAppWeb.TodoLive (errors have been logged)

